resources/scss/employee/hr-manager/evaluator.scss
@import '../../utils';
@import '../../scrollbar';
@import '../../scales/icon-size';
@import '../../scales/img-size';
@import '../../icon/lucide';
@import '../side-top-bar';
@import '../../palette/text-colors';
@import '../../palette/start-borders';
@import '../../placeholder/skeleton';
@import '../../footer';
@import '../../input/checkbox';
@import '../../input/choices';



// Define color variables
$normal-color: #D9D9D9;
$active-color: #61B000;

// Table and table row styles
table {
  width: 100%;
  border-collapse: separate;
  border-spacing: 0 10px;
  table-layout: fixed;

  thead {
    background-color: #F6F6F6;

    th {
      padding: 1rem 0 !important;

      &:first-child {
        width: 20%;
        border-top-left-radius: 8px;
        border-bottom-left-radius: 8px;
      }

      &:nth-child(2) {
        width: 30%;
      }

      &:last-child {
        width: 30%;
        border-top-right-radius: 8px;
        border-bottom-right-radius: 8px;
      }
    }
  }

  tbody {
    tr {
      &.active {
        td {
          border-color: $active-color;

          &:first-child, &:last-child, &:nth-child(2), .resume-score-circle {
            border-color: $active-color;
          }
        }
      }

      td {
        padding: 1rem !important;
        border-spacing: 0 10px;

        &:first-child {
          border-top-left-radius: 8px !important;
          border-bottom-left-radius: 8px !important;
          border-top: 2px solid $normal-color;
          border-bottom: 2px solid $normal-color;
          border-left: 2px solid $normal-color;
          border-right: none; /* No border on the right side */
        }

        &:last-child {
          border-top-right-radius: 8px !important;
          border-bottom-right-radius: 8px !important;
          border-top: 2px solid $normal-color;
          border-bottom: 2px solid $normal-color;
          border-right: 2px solid $normal-color;
          border-left: none; /* No border on the left side */
        }

        &:nth-child(2) {
          border-top: 2px solid $normal-color;
          border-bottom: 2px solid $normal-color;
          border-left: none; /* No border on the left side */
          border-right: none; /* No border on the right side */
        }
      }
    }
  }
}

// Resume score circle styles
.resume-score-circle {
  display: inline-block;
  width: 50px;
  height: 50px;
  border: 2.5px solid #727272;
  border-radius: 50%;
  text-align: center;
  line-height: 50px;
  font-weight: 700;

  &.active {
    border-color: $active-color; // Apply active color to the circle's border
  }
}

// Qualifications text with overflow
.qualifications-text {
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;

  &.expanded {
    -webkit-line-clamp: unset;
    overflow: unset;
    text-overflow: unset;
  }
}

// "See More" button
.see-more {
  display: none; /* Initially hide "See More" */
  color: $active-color;
  cursor: pointer;
  text-decoration: underline;

  &.show {
    display: inline-block;
  }

  &.hover-opacity:hover {
    opacity: 0.7; /* Add hover effect */
  }
}

// "See Less" button
.see-less {
  color: blue;
  cursor: pointer;
}

